src/pages/data-reporting/reports-api/v3.6/index.mdx
---
weight: 10
category: "data-reporting"
subcategory: "reports-api"
title: "Reports API"
tagline: "Access and extract data from Reports."
desc: "See how you can access and extract data from Reports with the use of Reports API."
versionGroup: "data-reporting"
apiVersion: "3.6"
robots: "noindex"
---

import { openChatWindow } from "utils/index";

# Introduction

Reports API allows you to **access** and **extract** all the [Reports](https://www.livechat.com/kb/reporting-options-available-in-livechat/) data available in LiveChat.

## Versioning

This document describes the **LiveChat Reports API v3.6**. This is the developer preview version that provides a preview of the upcoming changes to the API. **It's not open to public use.** However, if you want to test some features, contact us at developers@text.com or <a href="#open-chat" onClick={openChatWindow}>ask on the chat</a>, and we'll give you access. [Read more about versioning...](/data-reporting/#api-versioning)

## Authorization

You can authorize your calls to the Reports API using one of the following methods:

- [Bearer Token](/authorization/authorizing-api-calls/#implicit-grant)
- [Basic Auth (Personal Access Tokens)](/authorization/agent-authorization#personal-access-tokens)

# Methods

| The API endpoint                                               |
| -------------------------------------------------------------- |
| `https://api.livechatinc.com/v3.6/reports/<resource>/<action>` |

## Headers

**Common headers for all methods:**

| Header          | Value            | Required | Notes                                                |
| --------------- | ---------------- | -------- | ---------------------------------------------------- |
| `Authorization` | `Bearer <token>` | Yes      | Your access token                                    |
| `X-API-Version` | `3.6`            | No       | The API version. You can also specify it in the URL. |

**Additional headers specifically for the POST methods:**

| Header         | Value              | Required |
| -------------- | ------------------ | -------- |
| `Content-Type` | `application/json` | Yes      |

<Section>
<Text>

## Available methods

|                |                                                                                                                                                                                                                                                                                                 |
| -------------- | -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| **Chats**      | [`duration`](#duration) [`tags`](#tags) [`total_chats`](#total-chats) [`ratings`](#ratings) [`ranking`](#ranking) [`engagement`](#engagement) [`greetings_conversion`](#greetings-conversion) [`forms`](#forms) [`response_time`](#response-time) [`first_response_time`](#first-response-time) [`groups`](#groups) [`queued_visitors`](#queued_visitors) [`queued_visitors_left`](#queued_visitors_left)  |
| **Agents**     | [`availability`](#availability) [`performance`](#performance)                                                                                                                                                                                                                                                                                                                                              |
| **Tags**       | [`chat_usage`](#chat-usage)                                                                                                                                                                                                                                                                                                                                                                                |
| **Customers**  | [`unique_visitors`](#unique_visitors)                                                                                                                                                                                                                                                                                                                                                                      |

## Available parameters and filters

### For the Chats reports

| Parameter                                                             | Required | Data type | Notes                                                                                                                                                                                                                                                                                                             |
| --------------------------------------------------------------------- | -------- | --------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `distribution`                                                        | No       | `string`  | Allowed values: `hour`, `day`, `day-hours`, `month` or `year`. Defaults to `day`.                                                                                                                                                                                                                                 |
| `timezone`                                                            | No       | `string`  | IANA [Time Zone](http://en.wikipedia.org/wiki/List_of_tz_database_time_zones) (e.g. America/Phoenix). By default, the timezone is taken from the request. If it isn't provided, then it's taken from the agent's timezone. When it's impossible to load the agent's timezone, `filters.from` is parsed to get it. |
| `filters`                                                             | No       | `object`  | If none provided, your report will span the last seven days.                                                                                                                                                                                                                                                      |
| `filters.from`                                                        | No       | `string`  | Filters out chats that took place within the time range defined as <`from`,`to`>. Date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`.                                                                                                        |
| `filters.to`                                                          | No       | `string`  | Filters out chats that took place within the time range defined as <`from`,`to`>. Date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`.                                                                                                        |
| `filters.properties.<namespace>.<name>.<filter_type>`<sup>**1**</sup> | No       | `any`     | Described below.                                                                                                                                                                                                                                                                                                  |
| `filters.agents.<string_filter_type>`<sup>**2**</sup>                 | No       | `any`     | Described below; `exists` set to `false` will return unassigned chats; `true` will return the assigned ones.                                                                                                                                                                                                      |
| `filters.tags.<string_filter_type>`<sup>**2**</sup>                   | No       | `any`     | Described below.                                                                                                                                                                                                                                                                                                  |
| `filters.sales.<integer_filter_type>`<sup>**3**</sup>                 | No       | `any`     | Described below.                                                                                                                                                                                                                                                                                                  |
| `filters.goals.<integer_filter_type>`<sup>**3**</sup>                 | No       | `any`     | Described below.                                                                                                                                                                                                                                                                                                  |
| `filters.surveys.<survey>`<sup>**4**</sup>                            | No       | `array`   | Described below.                                                                                                                                                                                                                                                                                                  |
| `filters.event_types.<event_type_filter_type>`<sup>**5**</sup>        | No       | `any`     | Described below.                                                                                                                                                                                                                                                                                                  |
| `filters.groups.<integer_filter_type>`<sup>**3**</sup>                | No       | `array`   | Array of group IDs.                                                                                                                                                                                                                                                                                               |
| `filters.greetings.from`                                              | No       | `string`  | Filters out chats started from a greeting that was sent within the time range defined as <`from`,`to`>. Date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`.                                                                                  |
| `filters.greetings.to`                                                | No       | `string`  | Filters out chats started from a greeting that was sent within the time range defined as <`from`,`to`>. Date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`.                                                                                  |
| `filters.greetings.<filter_type>`<sup>**1**</sup>                     | No       | `any`     | Described below.                                                                                                                                                                                                                                                                                                  |
| `filters.greetings.groups.<integer_filter_type>`<sup>**3**</sup>      | No       | `any`     | Described below.                                                                                                                                                                                                                                                                                                  |
| `filters.agent_response.exists`                                       | No       | `bool`    |                                                                                                                                                                                                                                                                                                                   |
| `filters.agent_response.first`                                        | No       | `bool`    | Modifier that makes the other `agent_response` filters operate exclusively on the agents' first response.                                                                                                                                                                                                         |
| `filters.agent_response.agents.<string_filter_type>`<sup>**2**</sup>  | No       | `any`     | Described below. Works only if the `agent_response.first` filter is set to `true`.                                                                                                                                                                                                                                |
| `filters.agent_response.groups.<integer_filter_type>`<sup>**3**</sup> | No       | `any`     | Described below. Works only if the `agent_response.first` filter is set to `true`.                                                                                                                                                                                                                                |
| `filters.customer_countries.<string_filter_type>`<sup>**2**</sup>     | No       | `any`     | Described below. It supports country codes with the `ISO 3166-1 Alpha-2` format.                                                                                                                                                                                                                                  |

If filters are provided, they must contain exactly one pair of time-based filters (`filters.from/to`, `filters.greetings.from/to`, or `filters.surveys.from/to`).

Additional parameter for the `queued-visitors-left` method:

| Parameter                                             | Required | Data type | Notes                                                                                                                                                                                                                                                                                                             |
| ----------------------------------------------------- | -------- | --------- | ---------------------------------------------------------------|
| `page`                                                | No       | `int`     | Non-negative integer allows to paginate products (default: `1`)|

### For the Agents reports

| Parameter                                             | Required | Data type | Notes                                                                                                                                                                                                                                                                                                             |
| ----------------------------------------------------- | -------- | --------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `distribution`                                        | No       | `string`  | Allowed values: `hour`, `day`. Defaults to `day`.                                                                                                                                                                                                                                                                 |
| `timezone`                                            | No       | `string`  | IANA [Time Zone](http://en.wikipedia.org/wiki/List_of_tz_database_time_zones) (e.g. America/Phoenix). By default, the timezone is taken from the request. If it isn't provided, then it's taken from the agent's timezone. When it's impossible to load the agent's timezone, `filters.from` is parsed to get it. |
| `filters`                                             | No       | `object`  | If none provided, your report will span the last seven days.                                                                                                                                                                                                                                                      |
| `filters.from`                                        | No       | `string`  | Date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`.                                                                                                                                                                                          |
| `filters.to`                                          | No       | `string`  | Date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`.                                                                                                                                                                                          |
| `filters.agents.<string_filter_type>`<sup>**2**</sup> | No       | `any`     | Described below.                                                                                                                                                                                                                                                                                                  |
| `filters.groups.values`                               | No       | `array`   | Array of group IDs.                                                                                                                                                                                                                                                                                               |

If filters are provided, they must contain exactly one time-based filter (`filters.from/to`).

### For the Customer reports

| Parameter                                             | Required | Data type | Notes                                                                                                                                                                                                                                                                                                             |
| ----------------------------------------------------- | -------- | --------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `filters.from`                                        | No       | `string`  | Date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`.                                                                                                                                                                                          |
| `filters.to`                                          | No       | `string`  | Date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`.                                                                                                                                                                                          |

If filters are provided, they must contain exactly one time-based filter (`filters.from/to`).

</Text>
<Code>
</Code>
</Section>

**1)** `<filter_type>` can take the following values:

- `exists` (`bool`)
- `values` (`type[]` - an array with a specific type for property: `string`, `int` or `bool`)
- `exclude_values` (`type[]` - an array with a specific type for property: `string`, `int` or `bool`)

There's only one value allowed for a single property.

List of default properties can be found [**here**](/messaging/references/default-properties/#reference).

**2)** `<string_filter_type>` can take the following values:

- `exists` (`bool`) - 💡 available only for the [Chats](/data-reporting/reports-api/v3.6#for-chats-reports) parameter value
- `values` (`string[]` - an array of strings)
- `exclude_values` (`string[]` - an array of strings)
- `require_every_value` (`bool`) - if set to `true`, will return only those chats that have all elements passed in `values` or `exclude_values`

You can pass only one of the following values at a time: `exists`, `values` or `exclude_values`.

**3)** `<integer_filter_type>` can take the following values:

- `exists` (`bool`)
- `values` (`int[]` - an array of integers)
- `exclude_values` (`int[]` - an array of integers)
- `require_every_value` (`bool`) - if set to `true`, will return only those chats that have all elements passed in `values` or `exclude_values`

You can pass only one of the following values at a time: `exists`, `values` or `exclude_values`.

**4)** `<survey>` contains the following fields:

- `type` (`string`) - allowed values: `pre_chat`, `post_chat`
- `values` (`string[]`) - an array of answer_ids
- `exclude_values` (`string[]`) - an array of answer_ids
- `from` (`string`) - date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`
- `to` (`string`) - date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`
- `exists` (`bool`) - if set to `true`, will return only surveys with `survey_id`
- `groups` (`<integer_filter_type>`<sup>**3**</sup>)

<CodeResponse version="v3.6" type="reports" title={'Sample survey filter'} json="surveyFilter" />

**5)** `<event_type_filter_type>` can take the following values:

- `values` (`string[]` - an array of [Event](/messaging/agent-chat-api/v3.6/data-structures/#events) types, duplicates are ignored)
- `exclude_values` (`string[]` - an array of [Event](/messaging/agent-chat-api/v3.6/data-structures/#events) types, duplicates are ignored)
- `require_every_value` (`bool`) - if set to `true`, will return only those chats that have all elements passed in `values` or `exclude_values`

You can pass only one of the following values at a time: `exists`, `values` or `exclude_values`.

<CodeResponse version="v3.6" type="reports" title={'Sample filters'} json="filters" />

The JSON payload above translates into the following query string:

<CodeSample path={'FILTERS AS QUERY STRING PARAMS'}>

```shell
?filters.from=2021-03-01T23:59:59-00:00
&filters.to=2021-04-13T23:59:59-00:00
&filters.properties[routing][continuous].values=true
&filters.agents.values=joe@acme.com
&filters.agents.values=alice@acme.com
&filters.tags.exclude_values=spam
&filters.event_types.values=file
```

</CodeSample>

💡 Notice the square brackets `[]` when using GET query string params to define `properties.<namespace>` and `properties.<namespace>.<name>`.

## Chats

<Section>
<Text>

### Duration

Shows the average chatting duration of agents within a license.

#### Specifics

|                     |                                                           |
| ------------------- | --------------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/duration` |
| **HTTP method**     | POST, GET                                                 |
| **Required scopes** | `reports_read`                                            |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field                                  | Notes                                                  |
| -------------------------------------- | ------------------------------------------------------ |
| `total`                                | The total number of chats in the specified date range. |
| `records`                              | Contains `distribution` objects, for example, `day`.   |
| `records.day.count`                    | The total number of chats `agents` had that `day`.     |
| `records.day.agents_chatting_duration` | The average chat duration `agents` had that `day`.     |
| `records.day.duration`                 | The average chat duration for that `day`.              |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/duration \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "distribution": "day",
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="duration"/>

</Code>
</Section>

<Section>
<Text>

### Tags

Shows the distribution of tags for chats.

#### Specifics

|                     |                                                       |
| ------------------- | ----------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/tags` |
| **HTTP method**     | POST, GET                                             |
| **Required scopes** | `reports_read`                                        |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field               | Notes                                                    |
| ------------------- | -------------------------------------------------------- |
| `total`             | The total number of chats in the specified date range.   |
| `records`           | Contains the `distribution` objects, for example, `day`. |
| `records.day.<tag>` | The total number of chats tagged with `<tag>`.           |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/tags \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "distribution": "day",
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="tags"/>

</Code>
</Section>

<Section>
<Text>

### Total Chats

Shows how many chats occurred during the specified period.

#### Specifics

|                     |                                                              |
| ------------------- | ------------------------------------------------------------ |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/total_chats` |
| **HTTP method**     | POST, GET                                                    |
| **Required scopes** | `reports_read`                                               |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field                    | Notes                                                    |
| ------------------------ | -------------------------------------------------------- |
| `total`                  | The total number of chats in the specified date range.   |
| `records`                | Contains the `distribution` objects, for example, `day`. |
| `records.day.total`      | The total number of chats that `day`.                    |
| `records.day.continuous` | The number of continuous chats that `day`.               |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/total_chats \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "distribution": "day",
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="totalChats"/>

</Code>
</Section>

<Section>
<Text>

### Ratings

Shows the number of rated chats along with their ratings during a specified period of time.

#### Specifics

|                     |                                                          |
| ------------------- | -------------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/ratings` |
| **HTTP method**     | POST, GET                                                |
| **Required scopes** | `reports_read`                                           |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field               | Notes                                                    |
| ------------------- | -------------------------------------------------------- |
| `total`             | The total number of chats in the specified date range.   |
| `records`           | Contains the `distribution` objects, for example, `day`. |
| `records.day.chats` | The total number of chats that `day`.                    |
| `records.day.bad`   | The number of chats rated `bad` that `day`.              |
| `records.day.good`  | The number of chats rated `good` that `day`.             |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/ratings \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "distribution": "day",
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="ratings"/>

</Code>
</Section>

<Section>
<Text>

### Ranking

Shows the ratio of good to bad ratings for each operator.

#### Specifics

|                     |                                                          |
| ------------------- | -------------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/ranking` |
| **HTTP method**     | POST, GET                                                |
| **Required scopes** | `reports_read`                                           |

#### Request

See [available parameters and filters](#available-parameters-and-filters). 💡 Notice that the distribution parameter will have no effect on the response of this method.

#### Response

| Field                 | Notes                                                                                                                  |
| --------------------- | ---------------------------------------------------------------------------------------------------------------------- |
| `records`             | Contains the `agent` objects.                                                                                          |
| `records.agent.total` | The total number of chats an agent had in the specified period.                                                        |
| `records.agent.good`  | The number of agent's chats rated `good`.                                                                              |
| `records.agent.bad`   | The number of agent's chats rated `bad`.                                                                               |
| `records.agent.score` | The agent's score. [Read more about how we calculate agent rankings...](https://www.livechat.com/help/agent-rankings/) |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/ranking \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="ranking"/>

</Code>
</Section>

<Section>
<Text>

### Engagement

Shows the distribution of chats based on [engagement](https://www.livechat.com/help/manage-team-reports/#chat-engagement-report) during the specified period.

#### Specifics

|                     |                                                             |
| ------------------- | ----------------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/engagement` |
| **HTTP method**     | POST, GET                                                   |
| **Required scopes** | `reports_read`                                              |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field                                              | Notes                                                                            |
| -------------------------------------------------- | -------------------------------------------------------------------------------- |
| `total`                                            | The total number of chats in the specified date range.                           |
| `records`                                          | Contains the `distribution` objects, for example, `day`.                         |
| `records.day.total`                                | The total number of chats that `day`.                                            |
| `records.day.started_by_customer_from_greeting`    | The number of chats from greetings (also knows as targeted messages) that `day`. |
| `records.day.started_by_customer_without_greeting` | The number of chats started by a customer that `day`.                            |
| `records.day.started_by_agent`                     | The number of chats started by an agent that `day`.                              |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/engagement \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "distribution": "day",
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="engagement"/>

</Code>
</Section>

<Section>
<Text>

### Greetings Conversion

Shows the number of greetings sent to the customers and how many of those resulted in a chat or a goal. Greetings are also known as targeted messages.

The method will return only up to 100 values for each day. If there are more than 100 values, use the LiveChat App to access the full data for a given day.

#### Specifics

|                     |                                                                       |
| ------------------- | --------------------------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/greetings_conversion` |
| **HTTP method**     | POST, GET                                                             |
| **Required scopes** | `reports_read`                                                        |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field                               | Notes                                                                       |
| ----------------------------------- | --------------------------------------------------------------------------- |
| `total`                             | The total number of chats in the specified date range.                      |
| `records`                           | Contains the `distribution` objects, for example, `day`.                    |
| `records.day.greeting_id.accepted`  | The number of chats started as a result of accepting a greeting that `day`. |
| `records.day.greeting_id.canceled`  | The number of greetings customers dismissed that `day`.                     |
| `records.day.greeting_id.displayed` | The number of greetings displayed that `day`.                               |
| `records.day.greeting_id.goals`     | The number of goals resulted from the greetings that `day`.                 |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/greetings_conversion \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
   "distribution": "day",
   "filters": {
      "greetings": {
         "from": "2021-04-08T00:00:00-00:00",
         "to": "2021-04-15T23:59:59-00:00",
         "groups": {
            "values": [1]
         }
      }
   }
}'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="greetingsConversion"/>

</Code>
</Section>

<Section>
<Text>

### Forms

Returns the number of submitted chat forms along with the count of specific answers.

#### Specifics

|                     |                                                          |
| ------------------- | -------------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/forms` |
| **HTTP method**     | POST, GET                                                |
| **Required scopes** | `reports_read`                                           |

#### Request

See [available parameters and filters](#available-parameters-and-filters). 💡 Notice that the distribution parameter will have no effect on the response of this method.

#### Response

| Field                                                                            | Notes                                                    |
| -------------------------------------------------------------------------------- | -------------------------------------------------------- |
| `records`                                                                        | Contains `form` objects.                                 |
| `records[{form_index}]`                                                          | Form at a given index.                                   |
| `records[{form_index}].form_id`                                                  | Form ID.                                                 |
| `records[{form_index}].count`                                                    | Number of times this form was filled.                    |
| `records[{form_index}].group_id`                                                 | Group ID in which this `form` is.                        |
| `records[{form_index}].fields`                                                   | Contains `field` objects.                                |
| `records[{form_index}].fields[{field_index}]`                                    | Field at a given index.                                  |
| `records[{form_index}].fields[{field_index}].field_id`                           | Field ID.                                                |
| `records[{form_index}].fields[{field_index}].label`                              | Text label of form field.                                |
| `records[{form_index}].fields[{field_index}].answers`                            | List of `answer` objects.                                |
| `records[{form_index}].fields[{field_index}].answers[{answer_index}]`            | Answer at a given index.                                 |
| `records[{form_index}].fields[{field_index}].answers[{answer_index}].answer_id`  | Answer ID.                                               |
| `records[{form_index}].fields[{field_index}].answers[{answer_index}].label`      | Text label of answer.                                    |
| `records[{form_index}].fields[{field_index}].answers[{answer_index}].count`      | Number of times this answer was selected for this field. |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/forms \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="forms"/>

</Code>
</Section>

<Section>
<Text>

### Response Time

Shows the average agents' response time within a licence.

#### Specifics

|                     |                                                                |
| ------------------- | -------------------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/response_time` |
| **HTTP method**     | POST, GET                                                      |
| **Required scopes** | `reports_read`                                                 |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field                       | Notes                                                    |
| --------------------------- | -------------------------------------------------------- |
| `total`                     | The total number of chats in the specified date range.   |
| `records`                   | Contains the `distribution` objects, for example, `day`. |
| `records.day.count`         | The total number of chats that `day`.                    |
| `records.day.response_time` | The average chat response time for that `day`.           |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/response_time \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="responseTime"/>

</Code>
</Section>

<Section>
<Text>

### First Response Time

Shows the average agents' first response time within a licence.

#### Specifics

|                     |                                                                      |
| ------------------- | -------------------------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/first_response_time` |
| **HTTP method**     | POST, GET                                                            |
| **Required scopes** | `reports_read`                                                       |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field                             | Notes                                                    |
| --------------------------------- | -------------------------------------------------------- |
| `total`                           | The total number of chats in the specified date range.   |
| `records`                         | Contains the `distribution` objects, for example, `day`. |
| `records.day.count`               | The total number of chats that `day`.                    |
| `records.day.first_response_time` | The average chat first response time for that `day`.     |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/first_response_time \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="firstResponseTime"/>

</Code>
</Section>

<Section>
<Text>

### Groups

Shows the total number of chats were handled by each group during the specified period.

#### Specifics

|                     |                                                              |
| ------------------- | ------------------------------------------------------------ |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/groups`      |
| **HTTP method**     | POST, GET                                                    |
| **Required scopes** | `reports_read`                                               |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field                    | Notes                                                    |
| ------------------------ | -------------------------------------------------------- |
| `total`                  | The total number of chats in the specified date range.   |
| `records`                | Contains the `distribution` objects, for example, `day`. |
| `records.day.group`      | Contains the `<group>:<chat_count>` pairs.               |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/groups \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "distribution": "day",
    "filters": {
      "from": "2024-08-20T00:00:00-00:00",
      "to": "2024-08-22T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="groups"/>

</Code>
</Section>

<Section>
<Text>

### Groups

Shows the total number of chats were handled by each group during the specified period.

#### Specifics

|                     |                                                              |
| ------------------- | ------------------------------------------------------------ |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/groups`      |
| **HTTP method**     | POST, GET                                                    |
| **Required scopes** | `reports_read`                                               |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field                    | Notes                                                    |
| ------------------------ | -------------------------------------------------------- |
| `total`                  | The total number of chats in the specified date range.   |
| `records`                | Contains the `distribution` objects, for example, `day`. |
| `records.day.group`      | Contains the `<group>:<chat_count>` pairs.               |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/groups \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "distribution": "day",
    "filters": {
      "from": "2024-08-20T00:00:00-00:00",
      "to": "2024-08-22T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="groups"/>

</Code>
</Section>

<Section>
<Text>

### Queued Customers

Shows how many customers were waiting in the queue during the specified period.

#### Specifics

|                     |                                                              |
| ------------------- | ------------------------------------------------------------ |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/queued_visitors`      |
| **HTTP method**     | POST, GET                                                    |
| **Required scopes** | `reports_read`                                               |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field                          | Notes                                                                               |
| ------------------------------ | ----------------------------------------------------------------------------------- |
| `total`                        | The total number of chats in the specified date range.                              |
| `records`                      | Contains the `distribution` objects, for example, `day`.                            |
| `records.day.left_queue`       | Contains informations about customers that have left queue without starting a chat. |
| `records.day.left_queue.count` | Count of customers.                                                                 |
| `records.day.left_queue.min`   | Minium time in second spent in queue.                                               |
| `records.day.left_queue.max`   | Maximum time in second spent in queue.                                              |
| `records.day.left_queue.avg`   | Average time in second spent in queue.                                              |
| `records.day.queued`           | Contains informations about customers that have been in queue and stated a chat.    |
| `records.day.queued.count`     | Count of customers.                                                                 |
| `records.day.queued.min`       | Minium time in second spent in queue.                                               |
| `records.day.queued.max`       | Maximum time in second spent in queue.                                              |
| `records.day.queued.avg`       | Average time in second spent in queue.                                              |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/queued_visitors \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "distribution": "day",
    "filters": {
      "from": "2024-10-01T00:00:00-00:00",
      "to": "2024-10-03T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="queuedVisitors"/>

</Code>
</Section>

<Section>
<Text>

### Queued Customers Left

Shows what customers left the queue during the specified period.

#### Specifics

|                     |                                                              |
| ------------------- | ------------------------------------------------------------ |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/chats/queued_visitors_left`      |
| **HTTP method**     | POST, GET                                                    |
| **Required scopes** | `reports_read`                                               |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field                                               | Notes                                                                               |
| --------------------------------------------------- | ----------------------------------------------------------------------------------- |
| `total`                                             | The total number of chats in the specified date range.                              |
| `summary`                                           | Report summary                                                                      |
| `summary.left_without_details`                      | Count of customers with any identifing data.                                        |
| `summary.total_pages`                               | Total number of pages with customers.                                               |
| `records`                                           | Contains the `customer` objects, unique identifier is chat ID.                      |
| `records.{chat_id}                                  | Contains informations about customers that have left queue without starting a chat. |
| `records.{chat_id}.prechat_survey                   | Array of pre-chat survey fields.                                                    |
| `records.{chat_id}.prechat_survey.key               | Pre-chat survey field key.                                                          |
| `records.{chat_id}.prechat_survey.value             | Pre-chat survey field value.                                                        |
| `records.{chat_id}.prechat_survey.id                | Pre-chat survey field ID.                                                           |
| `records.{chat_id}.prechat_survey.type              | Pre-chat survey field type.                                                         |
| `records.{chat_id}.visitor                          | Customer identifing informations.                                                   |
| `records.{chat_id}.visitor.id                       | Customer uuiq ID.                                                                   |
| `records.{chat_id}.visitor.name                     | Customer name set in pre-chat survey.                                               |
| `records.{chat_id}.visitor.email                    | Customer email set in pre-chat survey.                                              |
| `records.{chat_id}.visitor.ip                       | Customer IP.                                                                        |
| `records.{chat_id}.visitor.visitor_custom_variables | Array of custom variables in {key}: {value} format.                                 |
| `records.{chat_id}.queue                            | Queue data.                                                                         |
| `records.{chat_id}.queue.duration                   | How long was queue.                                                                 |
| `records.{chat_id}.queue.url                        | At what url queue took place.                                                       |
| `records.{chat_id}.queue.group                      | To what group chat was routed to.                                                   |
| `records.{chat_id}.queue.start_date                 | When queue started.                                                                 |
| `records.{chat_id}.integration_variables            | Array of integration variables in {key}: {value} format.                            |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/chats/queued_visitors_left \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "distribution": "day",
    "filters": {
      "from": "2024-10-01T00:00:00-00:00",
      "to": "2024-10-03T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="queuedVisitorsLeft"/>

</Code>
</Section>

## Agents

<Section>
<Text>

### Availability

Shows for how long an agent, group, or the whole account was available for chatting during a specified period of time.

#### Specifics

|                     |                                                                |
| ------------------- | -------------------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/agents/availability` |
| **HTTP method**     | POST, GET                                                      |
| **Required scopes** | `reports_read`                                                 |

#### Request

See [available parameters and filters](#available-parameters-and-filters). Depending on the distribution parameter the response will contain a different time resolution.

#### Response

| Field             | Notes                                                                                              |
| ----------------- | -------------------------------------------------------------------------------------------------- |
| `total`           | Total time the chat was available in the specified date range.                                     |
| `records`         | Contains the `distribution` objects, for example, `day`.                                           |
| `records.hours`   | The total number of hours the chat was available that `day` (only for the `day` distribution).     |
| `records.minutes` | The total number of minutes the chat was available that `hour` (only for the `hour` distribution). |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/agents/availability \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="availability"/>

</Code>
</Section>

<Section>
<Text>

### Performance

Shows the total number of agent's chats, the number of good and bad rates they received, and how well they performed in the early stages of a chat. Additionally, the report shows the time an agent spent chatting, accepting and not accepting chats, as well as the total time they were logged in.

#### Specifics

|                     |                                                               |
| ------------------- | ------------------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/agents/performance` |
| **HTTP method**     | POST, GET                                                     |
| **Required scopes** | `reports_read`                                                |

#### Request

See [available parameters and filters](#available-parameters-and-filters).

#### Response

| Field                                | Notes                                                                                                  |
| ------------------------------------ | ------------------------------------------------------------------------------------------------------ |
| `summary`                            | Summary for all agents.                                                                                |
| `summary.chats_count`                | The total number of chats the agents had in the specified period of time.                              |
| `summary.chats_rated_good`           | The number of chats rated `good`.                                                                      |
| `summary.chats_rated_bad`            | The number of chats rated `bad`.                                                                       |
| `summary.first_response_chats_count` | The total number of chats in which the agents have replied to the first message sent by the customers. |
| `summary.first_response_time`        | The average time in seconds the agents took to send a first reply to the customers' messages.          |
| `records`                            | Contains the `agent` objects.                                                                          |
| `records.chats_count`                | The total number of chats the agent had in the specified period of time.                               |
| `records.chats_rated_good`           | The number of agent's chats rated `good`.                                                              |
| `records.chats_rated_bad`            | The number of agent's chats rated `bad`.                                                               |
| `records.first_response_chats_count` | The number of chats where the agent has replied to the first message sent by the customer.             |
| `records.first_response_time`        | The average time in seconds the agent took to send a first reply to the customers' messages.           |
| `records.accepting_chats_time`       | The time in seconds during which the agent had the `accepting_chats` status set.                       |
| `records.chatting_time`              | The time in seconds during which the agent was chatting.                                               |
| `records.logged_in_time`             | The time in seconds during which the agent was logged in.                                              |
| `records.not_accepting_chats_time`   | The time in seconds during which the agent had the `not_accepting_chats` status set.                   |

</Text>
<Code>
<CodeSample path={'REQUEST'}>
<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/agents/performance \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00"
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="performance"/>

</Code>
</Section>

## Tags

<Section>
<Text>

### Chat Usage

Shows the total number of chats marked with each tag listed in the report.

#### Specifics

|                     |                                                            |
| ------------------- | ---------------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/tags/chat_usage` |
| **HTTP method**     | POST, GET                                                  |
| **Required scopes** | `reports_read`                                             |

#### Request

| Parameter               | Required | Data type | Notes                                                                                                                                                                                                                                                                                                             |
| ----------------------- | -------- | --------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `timezone`              | No       | `string`  | IANA [Time Zone](http://en.wikipedia.org/wiki/List_of_tz_database_time_zones) (e.g. America/Phoenix). By default, the timezone is taken from the request. If it isn't provided, then it's taken from the agent's timezone. When it's impossible to load the agent's timezone, `filters.from` is parsed to get it. |
| `filters`               | No       | `object`  | If none provided, your report will span the last seven days.                                                                                                                                                                                                                                                      |
| `filters.from`          | No       | `string`  | Filters out chats that took place within the time range defined as <`from`,`to`>. Date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`.                                                                                                        |
| `filters.to`            | No       | `string`  | Filters out chats that took place within the time range defined as <`from`,`to`>. Date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`.                                                                                                        |
| `filters.groups.values` | No       | `[]int`   | Array of group IDs.                                                                                                                                                                                                                                                                                               |

#### Response

| Field     | Notes                                    |
| --------- | ---------------------------------------- |
| `records` | Contains the `<tag>:<chat_count>` pairs. |

</Text>
<Code>

<CodeSample path={'REQUEST'}>

<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/tags/chat_usage \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00",
      "groups": {
        "values": [ 0, 42 ]
      }
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="chatUsage"/>

</Code>
</Section>

## Stats

<Section>
<Text>

### Unique visitors

Shows the total number of page views and unique visitors for the specified period.

#### Specifics

|                     |                                                                  |
| ------------------- | ---------------------------------------------------------------- |
| **Method URL**      | `https://api.livechatinc.com/v3.6/reports/customers/unique_visitors` |
| **HTTP method**     | POST, GET                                                        |
| **Required scopes** | `reports_read`                                                   |

#### Request

| Parameter               | Required | Data type | Notes                                                                                                                                                                                                                                                                                                             |
| ----------------------- | -------- | --------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `filters`               | No       | `object`  | If none provided, your report will span the last seven days.                                                                                                                                                                                                                                                      |
| `filters.from`          | No       | `string`  | Filters out chats that took place within the time range defined as <`from`,`to`>. Date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`.                                                                                                        |
| `filters.to`            | No       | `string`  | Filters out chats that took place within the time range defined as <`from`,`to`>. Date & time format compatible with RFC3339 with optional resolution of microseconds, `YYYY-MM-DDTHH:MM:SS.ssssss+HH:MM`.                                                                                                        |

#### Response

| Field                     | Notes                                    |
| ------------------------- | ---------------------------------------- |
| `summary`                 | Reports summary                          |
| `summary.unique_visitors` | Number of unique visitors                |
| `summary.page_views`      | Number of page views                     |

</Text>
<Code>

<CodeSample path={'REQUEST'}>

<Sample>

```shell
curl -X POST \
https://api.livechatinc.com/v3.6/reports/stats/unique_visitors \
  -H 'Content-Type: application/json' \
  -H 'Authorization: Bearer <your_access_token>' \
  -d '{
    "filters": {
      "from": "2021-04-08T00:00:00-00:00",
      "to": "2021-04-15T23:59:59-00:00",
    }
  }'
```

</Sample>
</CodeSample>

<CodeResponse type="reports" version="v3.6" json="uniqueVisitors"/>

</Code>
</Section>

# Contact us

If you found a bug or a typo, you can create an issue on [GitHub](https://github.com/livechat/livechat-public-docs/). In case of any questions or feedback, don't hesitate to contact us at [developers@text.com](mailto:developers@text.com)
